Added the initial migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnStr": "Server=tcp:sedumediserversql.database.windows.net,1433;Initial Catalog=CMPG323DB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active;Directory=Default"
+    "ConnStr": "Data Source=sedumediserversql.database.windows.net;Initial Catalog=CMPG323DB;User ID=sedumediadmin;Password=Mdev@23%;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "JWT": {
     "ValidAudience": "5ee97304-1bc2-47df-a1ee-b5b3c172f848",
